# nba-statistics

./: .gitignore  LICENSE  README.md  analysis.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt
fantasy_basketball/: fantasy_league.py  player.py  rankings.py
src/fantasy_basketball/: __init__.py  analysis.py  optimizer.py  player.py  scoring.py  vor.py
src/fantasy_basketball/assets/: sleeper_data.json
src/fantasy_basketball/assets/2021-22/: Aaron Wiggins.csv  Alec Burks.csv  Alex Caruso.csv  Alex Len.csv  Amir Coffey.csv  Andre Drummond.csv  Andrew Wiggins.csv  Anfernee Simons.csv  Anthony Davis.csv  Anthony Edwards.csv  Ayo Dosunmu.csv  Bam Adebayo.csv  Bismack Biyombo.csv  Bogdan Bogdanović.csv  Bol Bol.csv  Bradley Beal.csv  Brandon Boston.csv  Brandon Clarke.csv  Brandon Williams.csv  Braxton Key.csv  Bruce Brown.csv  Cade Cunningham.csv  Cam Thomas.csv  Caris LeVert.csv  Charles Bassey.csv  Chris Boucher.csv  Chris Duarte.csv  Clint Capela.csv  Coby White.csv  Cole Anthony.csv  Corey Kispert.csv  Dalano Banton.csv  Damion Lee.csv  Daniel Theis.csv  DeMar DeRozan.csv  Dean Wade.csv  Deandre Ayton.csv  Delon Wright.csv  Deni Avdija.csv  Derrick White.csv  (+106 more)
src/fantasy_basketball/assets/2022-23/: A.J. Lawson.csv  Aaron Wiggins.csv  Alec Burks.csv  Alex Caruso.csv  Alex Len.csv  Alondes Williams.csv  Amir Coffey.csv  Andre Drummond.csv  Andrew Wiggins.csv  Bol Bol.csv  (+172 more)
src/fantasy_basketball/utils/: constants.py
tests/: test_analysis.py  test_optimizer.py  test_player.py  test_scoring.py  test_vor.py
tests/unittests/sports_betting/: test_player.py
(+683 files in other folders)
