[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy_basketball"
version = "0.1.0"
description = "Fantasy basketball player data analysis"
readme = "README.md"
authors = [{ name = "Sanjay Manoj" }]
requires-python = ">=3.11"
dependencies = [
    "nba_api==1.10.2",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "networkx==3.4.2",
    "scipy>=1.11.0",
    # Note: I removed the Jupyter/IPython internal bloat (ipykernel, etc.) 
    # as those should be in your environment, not your package dependencies.
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=fantasy_basketball --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
# Just use the package name here, not the path
source = ["fantasy_basketball"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
